<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_product"
        android:icon="@drawable/ic_products"
        android:title="@string/title_product" />

    <item
        android:id="@+id/navigation_receive"
        android:icon="@drawable/ic_receive"
        android:title="@string/title_receive" />

    <item
        android:id="@+id/navigation_release"
        android:icon="@drawable/ic_release"
        android:title="@string/title_release" />
    <item
        android:id="@+id/navigation_user"
        android:icon="@drawable/ic_user"
        android:title="@string/title_user" />
</menu>